--- a/README
+++ b/README
@@ -1,1 +1,16 @@
+# Lista de Compras
 
+Este é um projeto simples de **Lista de Compras**, onde os usuários podem adicionar itens, marcar como comprados e visualizar o total das compras. O aplicativo permite ao usuário interagir com a lista e acompanhar o progresso das compras, tornando a experiência mais organizada e prática.
+
+## Tecnologias Utilizadas
+- **HTML**: Estrutura básica da página.
+- **CSS**: Estilo e layout da aplicação.
+- **JavaScript**: Funcionalidades interativas, como adicionar, marcar e excluir itens da lista.
+- **LocalStorage (opcional)**: Para salvar a lista de compras no navegador e mantê-la após recarregar a página.
+
+## Funcionalidades
+- **Adicionar itens**: Permite que o usuário adicione itens à lista de compras.
+- **Marcar como comprado**: Os itens podem ser marcados como comprados com um simples clique.
+- **Excluir itens**: Itens podem ser removidos da lista.
+- **Calcular o total**: A lista calcula automaticamente o total dos itens adicionados.
+- **Responsividade**: A interface foi projetada para funcionar bem em dispositivos móveis e desktops.
